# afi920-sdk

./: .gitignore  AFI920_SDK_GUIDE.md  AFI920_SDK_GUIDE_ko.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_ko.md  THIRD_PARTY_NOTICES.md
bench_test/: README.md  _env.sh
bench_test/cpp_recording_920_cli/: CMakeLists.txt  README.md  USER_MANUAL.md  jsonl_writer.cpp  jsonl_writer.hpp  main.cpp  radars.json  run.sh
bench_test/cpp_recording_920_cli/recordings/: live_cpp.jsonl  live_cpp_tcp.jsonl
bench_test/cpp_viewer/: CMakeLists.txt  README.md  USER_MANUAL.md  frame_store.hpp  geometry.hpp  jsonl_recording.cpp  jsonl_recording.hpp  main.cpp  main_window.cpp  main_window.hpp  point_cloud_view.cpp  point_cloud_view.hpp  radar_source.cpp  radar_source.hpp  recording.cpp  recording.hpp  run.sh
bench_test/logger/: radar_logger.py
bench_test/python_recording_920_cli/: JSONL_FORMAT.md  README.md  USER_MANUAL.md  afi_jsonl.py  record_cli.py  run.sh
bench_test/python_recording_920_cli/recordings/: live_py.jsonl  live_py_tcp.jsonl
bench_test/python_viewer/: README.md  USER_MANUAL.md  geometry.py  radar_source.py  radar_viewer.py  recording.py  requirements.txt  run.sh
bench_test/python_viewer/recordings/: rec_20260630_134715.btsrec  rec_20260630_134715.json
docs/: api_reference.md
examples/cpp/: CMakeLists.txt  restart_sensor.cpp  sample_config.cpp  sample_data_stream.cpp  sample_discovery.cpp  sample_multi_sensor.cpp  sample_pointcloud.cpp  set_stream_destination.cpp
include/afi/: afi_config.h  afi_error.h  afi_sdk.h  afi_types.h
python/: README.md  pyproject.toml
python/examples/: sample_config.py  sample_config_backup.py  sample_data_stream.py  sample_discovery.py  sample_multi_sensor.py  sample_pointcloud.py  sample_shii_watchdog.py  sample_stream_reconnect.py  set_yaw_90.py
python/src/afi_sdk/: __init__.py  _sdk.py  software_update.py  someip.py  streams.py
scripts/: revendor_interface.sh
src/: CMakeLists.txt  afi_sdk.cpp  afi_sdk_impl.h
src/config_api/: config_client.cpp  config_client.h
src/discovery/: discovery.cpp  discovery.h
src/protocol/: csii_builder.cpp  csii_builder.h  e2e.cpp  e2e.h  rdi_parser.cpp  rdi_parser.h  shi_parser.cpp  shi_parser.h  someip.cpp  someip.h  someip_tp.cpp  someip_tp.h  spi_parser.cpp  spi_parser.h
src/transport/: platform.h  tcp_client.cpp  tcp_client.h  tcp_sender.cpp  tcp_sender.h  tcp_stream_client.cpp  tcp_stream_client.h  udp_receiver.cpp  udp_receiver.h
src/util/: endian_util.h  logger.cpp  logger.h
test/: CMakeLists.txt  test_common.h  test_config_api.cpp  test_csii_builder.cpp  test_csii_send.cpp  test_data_receive.cpp  test_discovery.cpp  test_e2e.cpp  test_live_conformance.py  test_python_streams.py  test_rdi_parser.cpp  test_shi_parser.cpp  test_software_update.py  test_someip.cpp  test_someip_tp.cpp  test_spi_parser.cpp
tools/: rdi_udp_sender.py  software_update.py
